--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,52 @@
-:root {
+.App {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
+  max-width: 1280px;
+  margin: 0 auto;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-direction: column;
+  align-items: center;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  text-align: center;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.searchBar {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 2rem;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.searchBar input[type="text"] {
+  width: 100%;
+  padding: 5px;
+  box-sizing: border-box;
+  margin-bottom: 1em;
+}
+
+table {
+  border-spacing: 0px;
+}
+
+table tr:hover {
+  background-color: mintcream;
+}
+
+th {
+  background-color: darkslategray;
+  color: white;
+}
+
+th:first-child {
+  border-right: 2px solid white;
+}
+
+th, td {
+  padding: 10px;
+  min-width: 200px;
+}
+
+tr:nth-child(even) {
+  background-color: whitesmoke;
+  border-radius: 5px;
 }
